@@ -22,10 +22,11 @@
 
 
 from collections import namedtuple
-from distutils.version import StrictVersion
+
+from crate.client._pep440 import Version
 
 Result = namedtuple('Result', ['rows', 'cols'])
-SYSINFO_MIN_VERSION = StrictVersion("0.54.0")
+SYSINFO_MIN_VERSION = Version("0.54.0")
 
 
 class SysInfoCommand:
