@@ -28,7 +28,7 @@ from setuptools import setup
 requirements = [
     'colorama<1',
     'Pygments>=2.4,<3',
-    'crate>=0.26.0',
+    'crate>=0.30.0',
     'platformdirs<3',
     'prompt-toolkit>=3.0,<4',
     'tabulate>=0.9,<0.10',
