@@ -7,6 +7,9 @@ Unreleased
 
 - Add support for Python 3.11, and drop support for Python 3.5 and 3.6.
 
+- Fix compatibility issue with ``crate-0.30.0`` in the area of comparing
+  server version numbers.
+
 2022/04/13 0.28.0
 =================
 
